# python-pytest-testing-project-79

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: lint.yml  tests.yml
hexlet-code/: loader.py  pyproject.toml
hexlet-code/page_loader/: __init__.py  loader.py
hexlet-code/tests/: test_loader.py
page_loader/: __init__.py  cli.py  exceptions.py  loader.py  naming.py
tests/: test_cli.py  test_loader.py  test_naming.py
tests/fixtures/: simple_page_com.html
