[project]
name = "hexlet-code"
version = "0.1.0"
description = "Page loader utility"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
page-loader = "page_loader.cli:main"

[project.optional-dependencies]
dev = [
    "flake8>=7.3.0",
    "pytest>=9.0.2",
    "requests-mock>=1.12.1",
]

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
