[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "requests-mock>=1.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "requests-mock>=1.12.1",
]

[project.scripts]
page-loader = "page_loader.scripts.main:main"
